# riak-haskell-client

./: .gitignore  riak.cabal
extended/: JSON.hs
extended/JSON/: Resolvable.hs
extended/Resolvable/: Internal.hs
protobuf/: proto.sh  riak-protobuf.cabal
protobuf/src/Network/Riak/: Protocol.hs
protobuf/src/Network/Riak/Protocol/: BucketProps.hs  Content.hs  DeleteRequest.hs  GetClientIDRequest.hs  GetClientIDResponse.hs  GetRequest.hs  GetServerInfoRequest.hs  IndexRequest.hs  ListBucketsRequest.hs  MapReduceRequest.hs  PingRequest.hs  PutRequest.hs  SearchQueryResponse.hs  ServerInfo.hs  SetClientIDRequest.hs
src/Network/: Riak.hs
src/Network/Riak/: Basic.hs  Content.hs  MapReduce.hs  Request.hs  Response.hs  Tag.hs  Types.hs  Value.hs
src/Network/Riak/Connection/: Internal.hs
src/Network/Riak/Types/: Internal.hs
src/Network/Riak/Value/: Resolvable.hs
